💫👗 Checkpoint ./script.js:41311861/102:42995283/1241 ./style.css:41298979/50:42995280/13:42995347/496 ./index.html:42995283/14:42995347/13

--- a/style.css
+++ b/style.css
@@ -34,3 +34,14 @@ p {
   padding-left: 20px;
 }
 
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20px;
+}
+
+#submit {
+  font-size: 0.8em;
+  margin-left: 5px;
+}
