--- a/style.css
+++ b/style.css
@@ -19,12 +19,15 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  color: rgb(8,34,19);
+  background-color: #9bcec8;
 }
 
 h1, h2 {
   display: flex;
   align-items: center;
   justify-content: center;  
+  text-decoration: underline;
 }
 
 p {
@@ -44,4 +47,5 @@ form {
 #submit {
   font-size: 0.8em;
   margin-left: 5px;
+  background-color: rgb(51,110,123);
 }
