--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p {
   align-items: center;
   justify-content: center;
   padding-left: 20px;
+  font-weight: bold;
 }
 
 form {
@@ -47,5 +48,6 @@ form {
 #submit {
   font-size: 0.8em;
   margin-left: 5px;
-  background-color: rgb(51,110,123);
+  background-color: rgb(8,34,19);
+  color: #9bcec8;
 }
